--- a/src/assets/scss/plugins/_plugin-react-slick.scss
+++ b/src/assets/scss/plugins/_plugin-react-slick.scss
@@ -17,16 +17,35 @@
   -webkit-tap-highlight-color: transparent;
 
   @media (min-width: 768px) {
-    .slick-caption {
+    .slick-caption-white {
       display: block !important;
     }
   }
 
-  .slick-caption {
+  @media (min-width: 768px) {
+    .slick-caption-black {
+      display: block !important;
+    }
+  }
+
+  .slick-caption-black {
     padding-bottom: 45px;
     position: absolute;
     right: 15%;
-    bottom: 20px;
+    bottom: 5px;
+    left: 15%;
+    z-index: 10;
+    padding-top: 20px;
+    color: #000000;
+    text-align: center;
+    z-index: 3;
+    display: none;
+  }
+  .slick-caption-white {
+    padding-bottom: 45px;
+    position: absolute;
+    right: 15%;
+    bottom: 5px;
     left: 15%;
     z-index: 10;
     padding-top: 20px;
